k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: angular-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: angular-app

  template:
    metadata:
      labels:
        app: angular-app

    spec:
      containers:
      - name: angular-app

        image: 623817050926.dkr.ecr.eu-west-2.amazonaws.com/angular-app:IMAGE_TAG

        ports:
        - containerPort: 80
