k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortlist-app-service
spec:
  type: ClusterIP
  selector:
    app: shortlist-app
  ports:
    - port: 80
      targetPort: 80
