k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlist-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: radevsecops.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortlist-app-service
                port:
                  number: 80
